--- a/templates/dashboard/mission/invoice_show.html.twig
+++ b/templates/dashboard/mission/invoice_show.html.twig
@@ -35,10 +35,10 @@
             <p>Dernière modification : {{ invoice.updatedAt|date('d/m/Y H:i:s') }}</p>
         {% endif %}
 
-        <embed src="{{ path('dashboard_mission_invoice_show_invoice', {'id': mission.id, 'invoiceId': invoice.id, 'name': invoice.realFilename})}}" width="500" height="500" type='application/pdf'>
+        <embed src="{{ path('dashboard_mission_invoice_show_invoice', {id: mission.id, invoiceId: invoice.id, name: invoice.realFilename}) }}" width="500" height="500" type='application/pdf'>
 
         <div class="space-x-3 flex">
-            <a href="{{ path('dashboard_mission_invoice', {'id': mission.id}) }}">
+            <a href="{{ path('dashboard_mission_invoice', {id: mission.id}) }}">
                 <div
                         class="relative rounded px-5 py-2.5 overflow-hidden group bg-slate-500 relative hover:bg-gradient-to-r hover:from-slate-500 hover:to-slate-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-slate-400 transition-all ease-out duration-300">
                 <span
@@ -55,7 +55,7 @@
                     <span class="relative">Modifier</span>
                 </div>
             </a>
-            <a href="{{ path('dashboard_mission_invoice_show_invoice', {'id': mission.id, 'invoiceId': invoice.id, 'name': invoice.realFilename}) }}" target="_blank">
+            <a href="{{ path('dashboard_mission_invoice_show_invoice', {id: mission.id, invoiceId: invoice.id, name: invoice.realFilename}) }}" target="_blank">
                 <div
                         class="relative rounded px-5 py-2.5 overflow-hidden group bg-yellow-500 relative hover:bg-gradient-to-r hover:from-yellow-500 hover:to-yellow-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-yellow-400 transition-all ease-out duration-300">
                 <span
@@ -68,4 +68,3 @@
     </div>
 
 {% endblock %}
-
