--- a/templates/dashboard/user/show.html.twig
+++ b/templates/dashboard/user/show.html.twig
@@ -26,7 +26,7 @@
             </div>
         </a>
         {{ include('dashboard/user/_delete_form.html.twig') }}
-        <a href="{{ path('dashboard_user_edit', {'id': user.id}) }}">
+        <a href="{{ path('dashboard_user_edit', {id: user.id}) }}">
             <div
                 class="relative rounded px-5 py-2.5 overflow-hidden group bg-green-500 relative hover:bg-gradient-to-r hover:from-green-500 hover:to-green-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-green-400 transition-all ease-out duration-300">
                 <span
