--- a/templates/components/InvoiceMissionEditForm.html.twig
+++ b/templates/components/InvoiceMissionEditForm.html.twig
@@ -45,7 +45,7 @@
 
         <div class="flex justify-end mt-6">
             <div class="space-x-3 flex">
-                <a href="{{ path('dashboard_mission_invoice_show_invoice', {'id': mission.id, 'invoiceId': invoice.id, 'name': invoice.realFilename}) }}" target="_blank">
+                <a href="{{ path('dashboard_mission_invoice_show_invoice', {id: mission.id, invoiceId: invoice.id, name: invoice.realFilename}) }}" target="_blank">
                     <div
                             class="relative rounded px-5 py-2.5 overflow-hidden group bg-yellow-500 relative hover:bg-gradient-to-r hover:from-yellow-500 hover:to-yellow-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-yellow-400 transition-all ease-out duration-300">
                 <span
@@ -53,7 +53,7 @@
                         <span class="relative">Ouvrir la facture actuel</span>
                     </div>
                 </a>
-                <a href="{{ path('dashboard_mission_invoice', { id: mission.id }) }}">
+                <a href="{{ path('dashboard_mission_invoice', {id: mission.id}) }}">
                     <div
                             class="relative rounded px-5 py-2.5 overflow-hidden group bg-slate-500 relative hover:bg-gradient-to-r hover:from-slate-500 hover:to-slate-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-slate-400 transition-all ease-out duration-300">
                         <span
@@ -71,7 +71,7 @@
         </div>
 
         <p>PDF actuelle :</p>
-        <embed src="{{ path('dashboard_mission_invoice_show_invoice', {'id': mission.id, 'invoiceId': invoice.id, 'name': invoice.realFilename})}}" width="500" height="500" type='application/pdf'>
+        <embed src="{{ path('dashboard_mission_invoice_show_invoice', {id: mission.id, invoiceId: invoice.id, name: invoice.realFilename}) }}" width="500" height="500" type='application/pdf'>
 
     {{ form_end(form) }}
 </div>
