--- a/templates/dashboard/address/show.html.twig
+++ b/templates/dashboard/address/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="p-10 space-y-3">
-    <p>Id : {{ address.id ?? "NULL" }}</p>
+    <p>Id : {{ address.id ?? 'NULL' }}</p>
     <p>Numéro de rue : {{ address.nbStreet }}</p>
     <p>Rue : {{ address.street }}</p>
     <p>Code postal : {{ address.zipCode }}</p>
@@ -21,7 +21,7 @@
             </div>
         </a>
         {{ include('dashboard/address/_delete_form.html.twig') }}
-        <a href="{{ path('dashboard_address_edit', {'id': address.id}) }}">
+        <a href="{{ path('dashboard_address_edit', {id: address.id}) }}">
             <div
                 class="relative rounded px-5 py-2.5 overflow-hidden group bg-green-500 relative hover:bg-gradient-to-r hover:from-green-500 hover:to-green-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-green-400 transition-all ease-out duration-300">
                 <span
