--- a/templates/dashboard/mission/_delete_invoice_form.html.twig
+++ b/templates/dashboard/mission/_delete_invoice_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('dashboard_mission_invoice_delete', {'id': mission.id, 'invoiceId': invoice.id}) }}"
+<form method="post" action="{{ path('dashboard_mission_invoice_delete', {id: mission.id, invoiceId: invoice.id}) }}"
       onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce document et tout les documents liée a celui ci ? Cette action est irréversible.');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ mission.id) }}">
     <button class="relative rounded px-5 py-2.5 overflow-hidden group bg-red-500 relative hover:bg-gradient-to-r
