--- a/templates/dashboard/person/_delete_form.html.twig
+++ b/templates/dashboard/person/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('dashboard_person_delete', {'id': person.id}) }}"
+<form method="post" action="{{ path('dashboard_person_delete', {id: person.id}) }}"
     onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cette personne ? Cette action est irréversible.');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ person.id) }}">
     <button class="relative rounded px-5 py-2.5 overflow-hidden group bg-red-500 relative hover:bg-gradient-to-r
