--- a/templates/dashboard_layout.html.twig
+++ b/templates/dashboard_layout.html.twig
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="https://msconsulting-europe.com/wp-content/uploads/2024/05/cropped-logo-square.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="{{ asset('./styles/css/home.css')}}" rel="stylesheet" />
+    <link href="{{ asset('./styles/css/home.css') }}" rel="stylesheet" />
     <script src="//unpkg.com/alpinejs" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/unpoly@3.7.3/unpoly.min.js"></script>
     <link
@@ -16,8 +16,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
-    
-    <link href="{{ asset('./styles/css/dashboard_layout.css')}}" rel="stylesheet" />
+
+    <link href="{{ asset('./styles/css/dashboard_layout.css') }}" rel="stylesheet" />
     {% block javascripts %}
       <script src="https://cdn.tailwindcss.com"></script>
       {% block importmap %}{{ importmap('app') }}{% endblock %}
@@ -27,7 +27,7 @@
 <body>
 
   <div class="flex-col w-full h-screen">
-    {% include 'components/sidebar.html.twig' %}
+    {{ include('components/sidebar.html.twig') }}
     <div id="content" class="ml-12 xl:p-4">
       {% block content %}{% endblock %}
     </div>
